--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="521.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
+<Pane prefHeight="521.0" prefWidth="746.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" stroke="BLACK" strokeType="INSIDE" width="302.0" />
     <ImageView fx:id="background" fitHeight="521.0" fitWidth="746.0">
         <Image url="@Images/moonlit_main_day.jpg" />
