--- a/src/main/resources/dk/dtu/view/lobby.fxml
+++ b/src/main/resources/dk/dtu/view/lobby.fxml
@@ -1,24 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" spacing="10"
-      fx:controller="dk.dtu.controller.LobbyController">
-    <HBox>
-        <VBox>
-            <TextField fx:id="usernameField" promptText="Enter your username"/>
-            <Button fx:id="connectButton" onAction="#handleConnectAction" text="Connect"/>
-            <TextField fx:id="messageField" promptText="Enter message here"/>
-            <Button onAction="#handleSendAction" text="Send"/>
-            <TextArea fx:id="messageAreaLobby" editable="false"/>
-        </VBox>
-        <VBox>
-            <Label text="Usernames:"/>
-            <TextArea fx:id="usernameList" editable="false" prefWidth="300.0"/>
-            <AnchorPane fx:id="lobbyAnchorPane" prefHeight="100.0" prefWidth="300.0">
-                <Button fx:id="StartGameButton" layoutX="108.0" layoutY="37.0" mnemonicParsing="false"
-                        onAction="#StartGameAction" text="StartGame"/>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="307.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.LobbyController">
+   <children>
+      <ImageView fitHeight="676.0" fitWidth="645.0" layoutY="-159.0">
+         <image>
+            <Image url="@Images/Moonlit_lobby.png" />
+         </image>
+      </ImageView>
+      <VBox layoutX="10.0" layoutY="10.0" />
+      <Label alignment="CENTER" layoutX="407.0" layoutY="27.0" prefHeight="26.0" prefWidth="158.0" style="-fx-background-color: #102f4d" text="Usernames:" textAlignment="CENTER" textFill="#9d0101">
+         <font>
+            <Font name="Arial" size="17.0" />
+         </font></Label>
+      <AnchorPane fx:id="StartGameButton" layoutX="424.0" layoutY="214.0" onMouseClicked="#StartGameAction" prefHeight="58.0" prefWidth="62.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#102f4d" height="58.0" stroke="BLACK" strokeType="INSIDE" width="123.0" />
+            <Text fill="#9d0101" layoutX="13.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start game">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
+      <TextArea fx:id="usernameList" editable="false" layoutX="407.0" layoutY="54.0" prefHeight="139.0" prefWidth="158.0" />
+      <VBox layoutX="24.0" layoutY="110.0" prefHeight="166.0" prefWidth="275.0">
+         <children>
+            <HBox prefHeight="27.0" prefWidth="254.0">
+               <children>
+                  <TextField fx:id="messageField" prefHeight="147.0" prefWidth="205.0" promptText="Enter message here" />
+                  <AnchorPane onMouseClicked="#handleSendAction" prefHeight="26.0" prefWidth="70.0">
+                     <children>
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#102f4d" height="28.0" layoutY="-1.0" stroke="BLACK" strokeType="INSIDE" width="70.0" />
+                        <Text fx:id="handleSendAction" fill="#9d0101" layoutX="18.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Send">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </HBox>
+            <TextArea fx:id="messageAreaLobby" editable="false" prefHeight="139.0" prefWidth="293.0" />
+         </children>
+      </VBox>
+      <HBox layoutX="24.0" layoutY="26.0" prefHeight="28.0" prefWidth="275.0">
+         <children>
+            <TextField fx:id="usernameField" prefHeight="26.0" prefWidth="279.0" promptText="Enter your username" />
+            <AnchorPane fx:id="connectButton" onMouseClicked="#handleConnectAction" prefHeight="26.0" prefWidth="70.0">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#102f4d" height="28.0" layoutX="1.0" stroke="BLACK" strokeType="INSIDE" width="70.0" />
+                  <Text fill="#9d0101" layoutX="10.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Connect">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Text>
+               </children>
             </AnchorPane>
-        </VBox>
-    </HBox>
-</VBox>
+         </children>
+      </HBox>
+   </children>
+</AnchorPane>
